# mc

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  install_fastnoise.sh  plans.md
cmake/: llvm-toolchain.cmake
docs/: 2d-chunk-system-evaluation.md  architecture.md  features.md  rendering.md  worldgen.md
glad/include/glad/: gl.h
glad/src/: gl.c
include/: AnsiCodes.hpp  App.hpp  Array2D.hpp  Assertion.hpp  AttributeTraits.hpp  BenchmarkMap.hpp  Biomes.hpp  Bitwise.hpp  BitwiseOps.hpp  Block.hpp  Breakpoints.hpp  BufferObjects.hpp  Camera.hpp  Chunk.hpp  ChunkConcurrency.hpp  ChunkConstants.hpp  ChunkDebugColors.hpp  ChunkDirector.hpp  ChunkEntry.hpp  ChunkGen_config.hpp  ChunkGen_utils.hpp  ChunkGenerator.hpp  ChunkHelpers.hpp  ChunkInvariants.hpp  ChunkMap.hpp  ChunkMesher.hpp  ChunkMesher_RawData.hpp  ChunkNoiseDebug.hpp  ChunkScheduler.hpp  ChunkStorage.hpp  ChunkView.hpp  ChunkViewHelpers.hpp  Colors01.hpp  CommonConcepts.hpp  CommonUtils.hpp  Concurrency.hpp  Context.hpp  CoordIteration.hpp  CoordTypes.hpp  DEBUG.hpp  (+88 more)
scripts/: annotate_glad_header.py  build_deps.sh  build_glbindings.sh  check_deps.sh  exec_wrapper.sh  print_exec_banner.sh  print_exit_code.sh  rename-header.cpp  rename_header.hpp  test_rename_header.cpp  x.md
shaders/: debug_chunks_fs.glsl  debug_chunks_vs.glsl  fs.glsl  line3d_fs.glsl  line3d_vs.glsl  vs.glsl
src/: AnsiCodes.cpp  App.cpp  Assertion.cpp  BenchmarkMap.cpp  BufferObjects.cpp  Camera.cpp  Chunk.cpp  ChunkConcurrency.cpp  ChunkDirector.cpp  ChunkEntry.cpp  ChunkGenerator.cpp  ChunkMap.cpp  ChunkMesher.cpp  ChunkScheduler.cpp  ChunkStorage.cpp  Concurrency.cpp  Context.cpp  DebugChunkLog.cpp  DebugChunkRenderer.cpp  DebugUI.cpp  Engine.cpp  GLFWCallbacks.cpp  Geometry.cpp  Input.cpp  Line3D.cpp  Line3DRenderer.cpp  Logger.cpp  Mesh.cpp  PendingBlockWrites.cpp  Profiler.cpp  Profiling.cpp  RenderTargets.cpp  Renderer.cpp  Shaders.cpp  Simulation.cpp  Simulation_WorldGen.cpp  Texture2D.cpp  TextureAtlas.cpp  ThreadTracker.cpp  Timer.cpp  (+10 more)
